argocd-main/resources/uat/idp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-provider
spec:
  selector:
    app: identity-provider
  ports:
  - port: 80
    targetPort: 8080
