argocd-main/resources/uat/idp/httprouter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-chapar
  namespace: idp-uat
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-resources
  hostnames:
  - app.gw.k8s.sh.aban.io
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: identity-provider
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /api/
